--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -283,10 +283,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deal with dataset 1\n",
+      "deal with dataset 2\n",
+      "deal with dataset 3\n",
+      "deal with dataset 4\n",
+      "deal with dataset 5\n",
+      "deal with dataset 6\n",
+      "deal with dataset 7\n",
+      "deal with dataset 8\n",
+      "deal with dataset 9\n",
+      "deal with dataset 10\n",
+      "deal with dataset 11\n",
+      "deal with dataset 12\n",
+      "deal with dataset 13\n",
+      "deal with dataset 14\n",
+      "deal with dataset 15\n",
+      "deal with dataset 16\n",
+      "deal with dataset 17\n",
+      "deal with dataset 18\n",
+      "deal with dataset 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "def feature_engineering_example():\n",
+    "    training = np.empty(shape=(0, 10))\n",
+    "    testing = np.empty(shape=(0, 10))\n",
+    "    # deal with each dataset file\n",
+    "    for i in range(19):\n",
+    "        df = pd.read_csv('daliac/dataset_' + str(i + 1) + '.txt', sep=',', header=None)\n",
+    "        print('deal with dataset ' + str(i + 1))\n",
+    "        for c in range(1, 14):\n",
+    "            activity_data = df[df[24] == c].values\n",
+    "            b, a = signal.butter(4, 0.04, 'low', analog=False)\n",
+    "            for j in range(24):\n",
+    "                activity_data[:, j] = signal.lfilter(b, a, activity_data[:, j])\n",
+    "            \n",
+    "            datat_len = len(activity_data)\n",
+    "            training_len = math.floor(datat_len * 0.8)\n",
+    "            training_data = activity_data[:training_len, :]\n",
+    "            testing_data = activity_data[training_len:, :]\n",
+    "\n",
+    "# data segementation: for time series data, we need to segment the whole time series, and then extract features \n",
+    "# from each period of time to represent the raw data. In this example code, we define each period of time contains \n",
+    "# 1000 data points. Each period of time contains different data points. You may consider overlap segmentation, \n",
+    "# which means consecutive two segmentation share a part of data points, to get more feature samples.\n",
+    "            training_sample_number = training_len // 1000 + 1\n",
+    "            testing_sample_number = (datat_len - training_len) // 1000 + 1\n",
+    "\n",
+    "            for s in range(training_sample_number):\n",
+    "                if s < training_sample_number - 1:\n",
+    "                    sample_data = training_data[1000*s:1000*(s + 1), :]\n",
+    "                else:\n",
+    "                    sample_data = training_data[1000*s:, :]\n",
+    "# in this example code, only three accelerometer data in wrist sensor is used to extract three simple features: \n",
+    "# min, max, and mean value in a period of time. Finally we get 9 features and 1 label to construct feature dataset. \n",
+    "# You may consider all sensors' data and extract more\n",
+    "\n",
+    "                feature_sample = []\n",
+    "                for i in range(3):\n",
+    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                feature_sample.append(sample_data[0, -1])\n",
+    "                feature_sample = np.array([feature_sample])\n",
+    "                training = np.concatenate((training, feature_sample), axis=0)\n",
+    "            \n",
+    "            for s in range(testing_sample_number):\n",
+    "                if s < training_sample_number - 1:\n",
+    "                    sample_data = testing_data[1000*s:1000*(s + 1), :]\n",
+    "                else:\n",
+    "                    sample_data = testing_data[1000*s:, :]\n",
+    "\n",
+    "                feature_sample = []\n",
+    "                for i in range(3):\n",
+    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                feature_sample.append(sample_data[0, -1])\n",
+    "                feature_sample = np.array([feature_sample])\n",
+    "                testing = np.concatenate((testing, feature_sample), axis=0)\n",
+    "\n",
+    "    df_training = pd.DataFrame(training)\n",
+    "    df_testing = pd.DataFrame(testing)\n",
+    "    df_training.to_csv('training_data.csv', index=None, header=None)\n",
+    "    df_testing.to_csv('testing_data.csv', index=None, header=None)\n",
+    "\n",
+    "feature_engineering_example()"
+   ]
   }
  ],
  "metadata": {
