--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -378,6 +378,80 @@
     "\n",
     "feature_engineering_example()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feature_engineering_example(dataset_collection):\n",
+    "    training = np.empty(shape=(0, 10))\n",
+    "    testing = np.empty(shape=(0, 10))\n",
+    "    # deal with each dataset file\n",
+    "    for participant in range(totaldatasets):\n",
+    "        for activity in range(1, 14):\n",
+    "            activity_data = remove_noise(dataset_collection.getSubjectActivity(participant, activity), filter_cutoff = 24)\n",
+    "            \n",
+    "            datat_len = len(activity_data)\n",
+    "            training_len = math.floor(datat_len * 0.8)\n",
+    "            training_data = activity_data[:training_len, :]\n",
+    "            testing_data = activity_data[training_len:, :]\n",
+    "\n",
+    "# data segementation: for time series data, we need to segment the whole time series, and then extract features \n",
+    "# from each period of time to represent the raw data. In this example code, we define each period of time contains \n",
+    "# 1000 data points. Each period of time contains different data points. You may consider overlap segmentation, \n",
+    "# which means consecutive two segmentation share a part of data points, to get more feature samples.\n",
+    "            training_sample_number = training_len // 1000 + 1\n",
+    "            testing_sample_number = (datat_len - training_len) // 1000 + 1\n",
+    "\n",
+    "            for s in range(training_sample_number):\n",
+    "                if s < training_sample_number - 1:\n",
+    "                    sample_data = training_data[1000*s:1000*(s + 1), :]\n",
+    "                else:\n",
+    "                    sample_data = training_data[1000*s:, :]\n",
+    "# in this example code, only three accelerometer data in wrist sensor is used to extract three simple features: \n",
+    "# min, max, and mean value in a period of time. Finally we get 9 features and 1 label to construct feature dataset. \n",
+    "# You may consider all sensors' data and extract more\n",
+    "\n",
+    "                feature_sample = []\n",
+    "                for i in range(3):\n",
+    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                feature_sample.append(sample_data[0, -1])\n",
+    "                feature_sample = np.array([feature_sample])\n",
+    "                training = np.concatenate((training, feature_sample), axis=0)\n",
+    "            \n",
+    "            for s in range(testing_sample_number):\n",
+    "                if s < training_sample_number - 1:\n",
+    "                    sample_data = testing_data[1000*s:1000*(s + 1), :]\n",
+    "                else:\n",
+    "                    sample_data = testing_data[1000*s:, :]\n",
+    "\n",
+    "                feature_sample = []\n",
+    "                for i in range(3):\n",
+    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                feature_sample.append(sample_data[0, -1])\n",
+    "                feature_sample = np.array([feature_sample])\n",
+    "                testing = np.concatenate((testing, feature_sample), axis=0)\n",
+    "\n",
+    "    df_training = pd.DataFrame(training)\n",
+    "    df_testing = pd.DataFrame(testing)\n",
+    "    df_training.to_csv('training_data.csv', index=None, header=None)\n",
+    "    df_testing.to_csv('testing_data.csv', index=None, header=None)\n",
+    "\n",
+    "feature_engineering_example(HAR_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
