Add informal tests

--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -448,6 +448,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datat_len: 12290\n",
+      "training_len: 9832\n",
+      "training_sample_number: 10\n",
+      "testing_sample_number: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "activity_data = remove_noise(HAR_dataset.getSubjectActivity(0, dataSets.SITTING), filter_cutoff = 24)\n",
+    "            \n",
+    "datat_len = len(activity_data)\n",
+    "training_len = math.floor(datat_len * 0.8)\n",
+    "training_data = activity_data[:training_len, :]\n",
+    "testing_data = activity_data[training_len:, :]\n",
+    "\n",
+    "print(\"datat_len: \"+str(datat_len))\n",
+    "print(\"training_len: \"+str(training_len))\n",
+    "\n",
+    "training_sample_number = training_len // 1000 + 1\n",
+    "testing_sample_number = (datat_len - training_len) // 1000 + 1\n",
+    "print(\"training_sample_number: \"+str(training_sample_number))\n",
+    "print(\"testing_sample_number: \"+str(testing_sample_number))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
