Import stats for skew and kurtosis

--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
-    "from scipy import signal\n",
+    "from scipy import signal, stats\n",
     "import matplotlib.pyplot as plt \n",
     "import math\n",
     "from sklearn import preprocessing\n",
@@ -381,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feature_engineering_example(dataset_collection):\n",
-    "    training = np.empty(shape=(0, 10))\n",
-    "    testing = np.empty(shape=(0, 10))\n",
+    "    training = np.empty(shape=(0, 19))\n",
+    "    testing = np.empty(shape=(0, 19))\n",
     "    # deal with each dataset file\n",
     "    for participant in range(totaldatasets):\n",
     "        for activity in range(1, 14):\n",
@@ -419,6 +419,9 @@
     "                    feature_sample.append(np.min(sample_data[:, i]))\n",
     "                    feature_sample.append(np.max(sample_data[:, i]))\n",
     "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.std(sample_data[:, i]))\n",
+    "                    feature_sample.append(stats.skew(sample_data[:, i]))\n",
+    "                    feature_sample.append(stats.kurtosis(sample_data[:, i]))\n",
     "                feature_sample.append(sample_data[0, -1])\n",
     "                feature_sample = np.array([feature_sample])\n",
     "                training = np.concatenate((training, feature_sample), axis=0)\n",
@@ -434,6 +437,9 @@
     "                    feature_sample.append(np.min(sample_data[:, i]))\n",
     "                    feature_sample.append(np.max(sample_data[:, i]))\n",
     "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
+    "                    feature_sample.append(np.std(sample_data[:, i]))\n",
+    "                    feature_sample.append(stats.skew(sample_data[:, i]))\n",
+    "                    feature_sample.append(stats.kurtosis(sample_data[:, i]))\n",
     "                feature_sample.append(sample_data[0, -1])\n",
     "                feature_sample = np.array([feature_sample])\n",
     "                testing = np.concatenate((testing, feature_sample), axis=0)\n",
