--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,6 +607,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.7562380038387716\n",
+      "[[ 40   7   1   1   0   0   0   0   0   0   4   4   0]\n",
+      " [  5  51   0   1   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   4  47   1   0   0   2   1   0   0   1   1   0]\n",
+      " [  1   1   2  78   7   7   2   0   0   0   0   1   0]\n",
+      " [  0   0   1  10  32   7   2   4   0   0   0   1   0]\n",
+      " [  2   0   1  12  25  34   7   2   1   0   0   1   0]\n",
+      " [  0   0   2   1   3   7 197   6   3   0   0   0   0]\n",
+      " [  0   0   1   0   0   0  13  23   2   0   0   0   0]\n",
+      " [  0   0   0   1   1   1   7   1  26   0   1   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
+      " [  2   0   0   3   1   6   3   0   0   0  68  17   0]\n",
+      " [  2   0   2   1   0   0   0   0   0   0  36  59   0]\n",
+      " [  0   0   0   0   0   0   1   0   0   0   0   0  37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_training_data(filepath):\n",
+    "    training_dataset = pd.read_csv(filepath, header=None)\n",
+    "    # Labels should start from 0 in sklearn\n",
+    "    data_labels = training_dataset[len(training_dataset.columns) - 1].values\n",
+    "    data_labels = data_labels - 1\n",
+    "    training_dataset = training_dataset.drop([len(training_dataset.columns) - 1], axis=1)\n",
+    "    data_features = training_dataset.values\n",
+    "    return data_labels, data_features\n",
+    "\n",
+    "def model_training_and_evaluation_example():\n",
+    "    y_train, X_train = get_training_data('training_data.csv')\n",
+    "    y_test, X_test = get_training_data('testing_data.csv')\n",
+    "    \n",
+    "    # Feature normalization for improving the performance of machine learning models. In this example code, \n",
+    "    # StandardScaler is used to scale original feature to be centered around zero. You could try other normalization methods.\n",
+    "    scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "    X_train = scaler.transform(X_train)\n",
+    "    X_test = scaler.transform(X_test)\n",
+    "\n",
+    "    # Build KNN classifier, in this example code\n",
+    "    knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "    knn.fit(X_train, y_train)\n",
+    "\n",
+    "    # Evaluation. when we train a machine learning model on training set, we should evaluate its performance on testing set.\n",
+    "    # We could evaluate the model by different metrics. Firstly, we could calculate the classification accuracy. In this example\n",
+    "    # code, when n_neighbors is set to 4, the accuracy achieves 0.757.\n",
+    "    y_pred = knn.predict(X_test)\n",
+    "    print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "    # We could use confusion matrix to view the classification for each activity.\n",
+    "    print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
+    "model_training_and_evaluation_example()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -631,6 +692,13 @@
     "# SVM 3 features Accuracy:  0.710172744721689\n",
     "# SVM 6 features Accuracy:  0.7802303262955854"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
