--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -607,30 +607,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy:  0.7562380038387716\n",
-      "[[ 40   7   1   1   0   0   0   0   0   0   4   4   0]\n",
-      " [  5  51   0   1   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   4  47   1   0   0   2   1   0   0   1   1   0]\n",
-      " [  1   1   2  78   7   7   2   0   0   0   0   1   0]\n",
-      " [  0   0   1  10  32   7   2   4   0   0   0   1   0]\n",
-      " [  2   0   1  12  25  34   7   2   1   0   0   1   0]\n",
-      " [  0   0   2   1   3   7 197   6   3   0   0   0   0]\n",
-      " [  0   0   1   0   0   0  13  23   2   0   0   0   0]\n",
-      " [  0   0   0   1   1   1   7   1  26   0   1   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
-      " [  2   0   0   3   1   6   3   0   0   0  68  17   0]\n",
-      " [  2   0   2   1   0   0   0   0   0   0  36  59   0]\n",
-      " [  0   0   0   0   0   0   1   0   0   0   0   0  37]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_training_data(filepath):\n",
     "    training_dataset = pd.read_csv(filepath, header=None)\n",
@@ -641,29 +620,51 @@
     "    data_features = training_dataset.values\n",
     "    return data_labels, data_features\n",
     "\n",
-    "def model_training_and_evaluation_example():\n",
-    "    y_train, X_train = get_training_data('training_data.csv')\n",
-    "    y_test, X_test = get_training_data('testing_data.csv')\n",
+    "def get_normalized_training_data():\n",
+    "    training_label, training_data = get_training_data('training_data.csv')\n",
+    "    testing_label, testing_data = get_training_data('testing_data.csv')\n",
     "    \n",
     "    # Feature normalization for improving the performance of machine learning models. In this example code, \n",
     "    # StandardScaler is used to scale original feature to be centered around zero. You could try other normalization methods.\n",
-    "    scaler = preprocessing.StandardScaler().fit(X_train)\n",
-    "    X_train = scaler.transform(X_train)\n",
-    "    X_test = scaler.transform(X_test)\n",
+    "    scaler = preprocessing.StandardScaler().fit(training_data)\n",
+    "    training_data = scaler.transform(training_data)\n",
+    "    testing_data = scaler.transform(testing_data)\n",
+    "    \n",
+    "    return training_label, training_data, testing_label, testing_data\n",
     "\n",
+    "def print_accuracy(test_labels, predicted_labels):\n",
+    "    print('Accuracy: ', accuracy_score(test_labels, predicted_labels))\n",
+    "    print(confusion_matrix(test_labels, predicted_labels))\n",
+    "\n",
+    "def run_k_nearest_neighbor(train_label, train_data, test_label, test_data):\n",
     "    # Build KNN classifier, in this example code\n",
     "    knn = KNeighborsClassifier(n_neighbors=3)\n",
-    "    knn.fit(X_train, y_train)\n",
+    "    knn.fit(train_data, train_label)\n",
     "\n",
     "    # Evaluation. when we train a machine learning model on training set, we should evaluate its performance on testing set.\n",
     "    # We could evaluate the model by different metrics. Firstly, we could calculate the classification accuracy. In this example\n",
     "    # code, when n_neighbors is set to 4, the accuracy achieves 0.757.\n",
-    "    y_pred = knn.predict(X_test)\n",
-    "    print('Accuracy: ', accuracy_score(y_test, y_pred))\n",
+    "    predict_label = knn.predict(test_data)\n",
     "    # We could use confusion matrix to view the classification for each activity.\n",
-    "    print(confusion_matrix(y_test, y_pred))\n",
+    "    print_accuracy(test_label, predict_label)\n",
     "\n",
-    "model_training_and_evaluation_example()"
+    "def run_support_vector_machine(train_label, train_data, test_label, test_data):\n",
+    "    # Another machine learning model: svm. In this example code, we use gridsearch to find the optimial classifier\n",
+    "    # It will take a long time to find the optimal classifier.\n",
+    "    # the accuracy for SVM classifier with default parameters is 0.71, \n",
+    "    # which is worse than KNN. The reason may be parameters of svm classifier are not optimal.  \n",
+    "    # Another reason may be we only use 9 features and they are not enough to build a good svm classifier. \n",
+    "    tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-1,1e-2, 1e-3, 1e-4],\n",
+    "                     'C': [1e-3, 1e-2, 1e-1, 1, 10, 100, 100]},\n",
+    "                    {'kernel': ['linear'], 'C': [1e-3, 1e-2, 1e-1, 1, 10, 100]}]\n",
+    "    acc_scorer = make_scorer(accuracy_score)\n",
+    "    grid_obj  = GridSearchCV(SVC(), tuned_parameters, cv=10, scoring=acc_scorer)\n",
+    "    grid_obj  = grid_obj .fit(train_data, train_label)\n",
+    "    clf = grid_obj.best_estimator_\n",
+    "    print('best clf:', clf)\n",
+    "    clf.fit(train_data, train_label)\n",
+    "    predict_label = clf.predict(test_data)\n",
+    "    print_accuracy(test_label, predict_label)\n"
    ]
   },
   {
@@ -695,10 +696,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.7562380038387716\n",
+      "[[ 40   7   1   1   0   0   0   0   0   0   4   4   0]\n",
+      " [  5  51   0   1   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   4  47   1   0   0   2   1   0   0   1   1   0]\n",
+      " [  1   1   2  78   7   7   2   0   0   0   0   1   0]\n",
+      " [  0   0   1  10  32   7   2   4   0   0   0   1   0]\n",
+      " [  2   0   1  12  25  34   7   2   1   0   0   1   0]\n",
+      " [  0   0   2   1   3   7 197   6   3   0   0   0   0]\n",
+      " [  0   0   1   0   0   0  13  23   2   0   0   0   0]\n",
+      " [  0   0   0   1   1   1   7   1  26   0   1   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
+      " [  2   0   0   3   1   6   3   0   0   0  68  17   0]\n",
+      " [  2   0   2   1   0   0   0   0   0   0  36  59   0]\n",
+      " [  0   0   0   0   0   0   1   0   0   0   0   0  37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ytrain, xtrain, ytest, xtest = get_normalized_training_data()\n",
+    "run_k_nearest_neighbor(ytrain, xtrain, ytest, xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:813: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best clf: SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "    decision_function_shape='ovr', degree=3, gamma=0.1, kernel='rbf',\n",
+      "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "    tol=0.001, verbose=False)\n",
+      "Accuracy:  0.7802303262955854\n",
+      "[[ 46   4   1   1   0   0   0   0   0   0   3   2   0]\n",
+      " [  6  51   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  1   3  48   1   1   0   1   0   0   0   1   1   0]\n",
+      " [  2   0   2  83   3   8   0   0   0   0   1   0   0]\n",
+      " [  0   0   3   7  36   9   1   1   0   0   0   0   0]\n",
+      " [  0   1   2   6  23  46   5   0   1   0   0   1   0]\n",
+      " [  0   0   2   1   1   7 199   6   3   0   0   0   0]\n",
+      " [  0   0   1   0   0   0  11  25   2   0   0   0   0]\n",
+      " [  0   0   1   0   1   3   7   2  24   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
+      " [  3   0   0   2   1   8   2   0   0   0  73  11   0]\n",
+      " [  1   0   0   1   0   0   0   0   0   0  47  51   0]\n",
+      " [  1   0   1   0   0   0   1   0   0   0   0   0  35]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_support_vector_machine(ytrain, xtrain, ytest, xtest)"
+   ]
   },
   {
    "cell_type": "code",
