feature_engineering_example() separated into new functions

--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -381,13 +381,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def time_series_features(time_series, segment_size = 1000, total_sensors = 3, extract_feature = [np.min, np.max, np.mean]):\n",
+    "    feature_set = []\n",
+    "# data segementation: for time series data, we need to segment the whole time series, and then extract features \n",
+    "# from each period of time to represent the raw data. In this example code, we define each period of time contains \n",
+    "# 1000 data points. Each period of time contains different data points. You may consider overlap segmentation, \n",
+    "# which means consecutive two segmentation share a part of data points, to get more feature samples.\n",
+    "    total_segments = len(time_series) // segment_size + 1\n",
+    "   \n",
+    "    for segment in range(total_segments):\n",
+    "        if segment < total_segments - 1:\n",
+    "            sample_data = time_series[segment_size*segment: segment_size*(segment+1), :]\n",
+    "        else:\n",
+    "            sample_data = time_series[segment_size*segment:,:]\n",
+    "\n",
+    "# in this example code, only three accelerometer data in wrist sensor is used to extract three simple features: \n",
+    "# min, max, and mean value in a period of time. Finally we get 9 features and 1 label to construct feature dataset. \n",
+    "# You may consider all sensors' data and extract more\n",
+    "        feature_sample = []\n",
+    "        for sensor in range(total_sensors):\n",
+    "            for feature in extract_feature:\n",
+    "                feature_sample.append(feature(sample_data[:, sensor]))\n",
+    "        feature_sample.append(sample_data[0, -1])\n",
+    "        feature_set.append(feature_sample)\n",
+    "    \n",
+    "    return feature_set\n",
+    "\n",
+    "def convert_to_csv(two_dimension_array, filepath):\n",
+    "    pd.DataFrame(two_dimension_array).to_csv(filepath, index=None, header=None)\n",
+    "    \n",
+    "\n",
     "def feature_engineering_example(dataset_collection):\n",
-    "    training = np.empty(shape=(0, 19))\n",
-    "    testing = np.empty(shape=(0, 19))\n",
+    "    training_feature_set = []\n",
+    "    testing_feature_set = []\n",
+    "    \n",
+    "    features = [np.min, np.max, np.mean, np.std, stats.skew, stats.kurtosis]\n",
     "    # deal with each dataset file\n",
     "    for participant in range(totaldatasets):\n",
     "        for activity in range(1, 14):\n",
@@ -398,56 +430,13 @@
     "            training_data = activity_data[:training_len, :]\n",
     "            testing_data = activity_data[training_len:, :]\n",
     "\n",
-    "# data segementation: for time series data, we need to segment the whole time series, and then extract features \n",
-    "# from each period of time to represent the raw data. In this example code, we define each period of time contains \n",
-    "# 1000 data points. Each period of time contains different data points. You may consider overlap segmentation, \n",
-    "# which means consecutive two segmentation share a part of data points, to get more feature samples.\n",
-    "            training_sample_number = training_len // 1000 + 1\n",
-    "            testing_sample_number = (datat_len - training_len) // 1000 + 1\n",
+    "            training_feature_set = training_feature_set + \\\n",
+    "                                   time_series_features(training_data, 1000, 3, features)\n",
+    "            testing_feature_set = testing_feature_set + \\\n",
+    "                                  time_series_features(testing_data, 1000, 3, features)\n",
     "\n",
-    "            for s in range(training_sample_number):\n",
-    "                if s < training_sample_number - 1:\n",
-    "                    sample_data = training_data[1000*s:1000*(s + 1), :]\n",
-    "                else:\n",
-    "                    sample_data = training_data[1000*s:, :]\n",
-    "# in this example code, only three accelerometer data in wrist sensor is used to extract three simple features: \n",
-    "# min, max, and mean value in a period of time. Finally we get 9 features and 1 label to construct feature dataset. \n",
-    "# You may consider all sensors' data and extract more\n",
-    "\n",
-    "                feature_sample = []\n",
-    "                for i in range(3):\n",
-    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.std(sample_data[:, i]))\n",
-    "                    feature_sample.append(stats.skew(sample_data[:, i]))\n",
-    "                    feature_sample.append(stats.kurtosis(sample_data[:, i]))\n",
-    "                feature_sample.append(sample_data[0, -1])\n",
-    "                feature_sample = np.array([feature_sample])\n",
-    "                training = np.concatenate((training, feature_sample), axis=0)\n",
-    "            \n",
-    "            for s in range(testing_sample_number):\n",
-    "                if s < training_sample_number - 1:\n",
-    "                    sample_data = testing_data[1000*s:1000*(s + 1), :]\n",
-    "                else:\n",
-    "                    sample_data = testing_data[1000*s:, :]\n",
-    "\n",
-    "                feature_sample = []\n",
-    "                for i in range(3):\n",
-    "                    feature_sample.append(np.min(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.max(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.mean(sample_data[:, i]))\n",
-    "                    feature_sample.append(np.std(sample_data[:, i]))\n",
-    "                    feature_sample.append(stats.skew(sample_data[:, i]))\n",
-    "                    feature_sample.append(stats.kurtosis(sample_data[:, i]))\n",
-    "                feature_sample.append(sample_data[0, -1])\n",
-    "                feature_sample = np.array([feature_sample])\n",
-    "                testing = np.concatenate((testing, feature_sample), axis=0)\n",
-    "\n",
-    "    df_training = pd.DataFrame(training)\n",
-    "    df_testing = pd.DataFrame(testing)\n",
-    "    df_training.to_csv('training_data.csv', index=None, header=None)\n",
-    "    df_testing.to_csv('testing_data.csv', index=None, header=None)\n",
+    "    convert_to_csv(training_feature_set, 'training_data.csv')\n",
+    "    convert_to_csv(testing_feature_set, 'testing_data.csv')\n",
     "\n",
     "feature_engineering_example(HAR_dataset)"
    ]
@@ -687,6 +676,10 @@
     "print(FSOL)\n",
     "FSOL = FSOL - 1\n",
     "print(FSOL)\n",
+    "\n",
+    "# Training = 1355 KB\n",
+    "# Testing = 368\n",
+    "\n",
     "# KNN 3 features Accuracy:  0.7504798464491362\n",
     "# KNN 6 features Accuracy:  0.7562380038387716\n",
     "\n",
@@ -765,6 +758,84 @@
    ],
    "source": [
     "run_support_vector_machine(ytrain, xtrain, ytest, xtest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[[ 7 14 24]]\n",
+      "[[ 7. 14. 24.]]\n",
+      "[[ 7. 14. 24.]\n",
+      " [ 7. 14. 24.]]\n",
+      "[[24 32 19]\n",
+      " [64 26 78]]\n",
+      "[[ 7. 14. 24.]\n",
+      " [ 7. 14. 24.]\n",
+      " [24. 32. 19.]\n",
+      " [64. 26. 78.]]\n",
+      "[[74, 64, 54], [32, 42, 52], [74, 64, 54], [32, 42, 52]]\n",
+      "[[74 64 54]\n",
+      " [32 42 52]\n",
+      " [74 64 54]\n",
+      " [32 42 52]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#training = np.empty(shape=(0, 19))\n",
+    "#testing = np.empty(shape=(0, 19))\n",
+    "\n",
+    "#feature_sample = np.array([feature_sample])\n",
+    "#training = np.concatenate((training, feature_sample), axis=0)\n",
+    "\n",
+    "empty = np.empty(shape=(0,3))\n",
+    "print(empty)\n",
+    "sample = np.array([[7,14,24]])\n",
+    "print(sample)\n",
+    "empty = np.concatenate((empty, sample), axis=0)\n",
+    "print(empty)\n",
+    "empty = np.concatenate((empty, sample), axis=0)\n",
+    "print(empty)\n",
+    "sample = np.array([[24,32,19], [64,26,78]])\n",
+    "print(sample)\n",
+    "empty = np.concatenate((empty, sample), axis = 0)\n",
+    "print(empty)\n",
+    "\n",
+    "empty = []\n",
+    "sample = [[74,64,54], [32,42,52]]\n",
+    "empty = empty + sample + sample\n",
+    "print(empty)\n",
+    "empty = np.array(empty)\n",
+    "print(empty)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[[]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty = []\n",
+    "fsol = []\n",
+    "print(empty + fsol)\n",
+    "empty.append(fsol)\n",
+    "print(empty)"
    ]
   },
   {
