Scores from ML accuracy tests, changed some variable names

--- a/HumanActivityRecognitionProject.ipynb
+++ b/HumanActivityRecognitionProject.ipynb
@@ -381,30 +381,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def time_series_features(time_series, segment_size = 1000, total_sensors = 3, extract_feature = [np.min, np.max, np.mean]):\n",
+    "def time_series_features(time_series, time_window = 1000, total_sensors = 3, select_features = [np.min, np.max, np.mean]):\n",
     "    feature_set = []\n",
     "# data segementation: for time series data, we need to segment the whole time series, and then extract features \n",
     "# from each period of time to represent the raw data. In this example code, we define each period of time contains \n",
     "# 1000 data points. Each period of time contains different data points. You may consider overlap segmentation, \n",
     "# which means consecutive two segmentation share a part of data points, to get more feature samples.\n",
-    "    total_segments = len(time_series) // segment_size + 1\n",
+    "    total_segments = len(time_series) // time_window + 1\n",
     "   \n",
     "    for segment in range(total_segments):\n",
     "        if segment < total_segments - 1:\n",
-    "            sample_data = time_series[segment_size*segment: segment_size*(segment+1), :]\n",
+    "            sample_data = time_series[time_window*segment: time_window*(segment+1), :]\n",
     "        else:\n",
-    "            sample_data = time_series[segment_size*segment:,:]\n",
+    "            sample_data = time_series[time_window*segment:,:]\n",
     "\n",
     "# in this example code, only three accelerometer data in wrist sensor is used to extract three simple features: \n",
     "# min, max, and mean value in a period of time. Finally we get 9 features and 1 label to construct feature dataset. \n",
     "# You may consider all sensors' data and extract more\n",
     "        feature_sample = []\n",
     "        for sensor in range(total_sensors):\n",
-    "            for feature in extract_feature:\n",
+    "            for feature in select_features:\n",
     "                feature_sample.append(feature(sample_data[:, sensor]))\n",
     "        feature_sample.append(sample_data[0, -1])\n",
     "        feature_set.append(feature_sample)\n",
@@ -415,30 +415,29 @@
     "    pd.DataFrame(two_dimension_array).to_csv(filepath, index=None, header=None)\n",
     "    \n",
     "\n",
-    "def feature_engineering_example(dataset_collection):\n",
+    "def feature_engineering_example(dataset_collection, \n",
+    "                                training_ratio = 0.8, \n",
+    "                                time_window = 1000, \n",
+    "                                total_sensors = 3, \n",
+    "                                features = [np.min, np.max, np.mean]):\n",
     "    training_feature_set = []\n",
     "    testing_feature_set = []\n",
-    "    \n",
-    "    features = [np.min, np.max, np.mean, np.std, stats.skew, stats.kurtosis]\n",
     "    # deal with each dataset file\n",
     "    for participant in range(totaldatasets):\n",
     "        for activity in range(1, 14):\n",
     "            activity_data = remove_noise(dataset_collection.getSubjectActivity(participant, activity), filter_cutoff = 24)\n",
-    "            \n",
-    "            datat_len = len(activity_data)\n",
-    "            training_len = math.floor(datat_len * 0.8)\n",
+    "\n",
+    "            training_len = math.floor(len(activity_data) * training_ratio)\n",
     "            training_data = activity_data[:training_len, :]\n",
     "            testing_data = activity_data[training_len:, :]\n",
     "\n",
     "            training_feature_set = training_feature_set + \\\n",
-    "                                   time_series_features(training_data, 1000, 3, features)\n",
+    "                                   time_series_features(training_data, time_window, total_sensors, features)\n",
     "            testing_feature_set = testing_feature_set + \\\n",
-    "                                  time_series_features(testing_data, 1000, 3, features)\n",
+    "                                  time_series_features(testing_data, time_window, total_sensors, features)\n",
     "\n",
     "    convert_to_csv(training_feature_set, 'training_data.csv')\n",
-    "    convert_to_csv(testing_feature_set, 'testing_data.csv')\n",
-    "\n",
-    "feature_engineering_example(HAR_dataset)"
+    "    convert_to_csv(testing_feature_set, 'testing_data.csv')"
    ]
   },
   {
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +679,7 @@
     "# Training = 1355 KB\n",
     "# Testing = 368\n",
     "\n",
-    "# KNN 3 features Accuracy:  0.7504798464491362\n",
+    "# KNN 3 sensors features Accuracy:  0.7504798464491362\n",
     "# KNN 6 features Accuracy:  0.7562380038387716\n",
     "\n",
     "# SVM 3 features Accuracy:  0.710172744721689\n",
@@ -689,26 +688,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def feature_engineering_example(dataset_collection, \n",
+    "#                                training_ratio = 0.8, \n",
+    "#                                time_window = 1000, \n",
+    "#                                total_sensors = 3, \n",
+    "#                                features = [np.min, np.max, np.mean]):\n",
+    "# features = [np.min, np.max, np.mean, np.std, stats.skew, stats.kurtosis]\n",
+    "\n",
+    "feature_engineering_example(HAR_dataset, total_sensors = 24, features = [np.min, np.max, np.mean, np.std, stats.skew, stats.kurtosis])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7562380038387716\n",
-      "[[ 40   7   1   1   0   0   0   0   0   0   4   4   0]\n",
-      " [  5  51   0   1   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   4  47   1   0   0   2   1   0   0   1   1   0]\n",
-      " [  1   1   2  78   7   7   2   0   0   0   0   1   0]\n",
-      " [  0   0   1  10  32   7   2   4   0   0   0   1   0]\n",
-      " [  2   0   1  12  25  34   7   2   1   0   0   1   0]\n",
-      " [  0   0   2   1   3   7 197   6   3   0   0   0   0]\n",
-      " [  0   0   1   0   0   0  13  23   2   0   0   0   0]\n",
-      " [  0   0   0   1   1   1   7   1  26   0   1   0   0]\n",
+      "Accuracy:  0.9126679462571977\n",
+      "[[ 52   1   2   2   0   0   0   0   0   0   0   0   0]\n",
+      " [  0  57   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  3   0  52   2   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   3  96   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   1   2  49   5   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   2  22  58   1   2   0   0   0   0   0]\n",
+      " [  0   0   0   1   5   1 212   0   0   0   0   0   0]\n",
+      " [  0   0   1   0   0   0   1  36   0   0   0   1   0]\n",
+      " [  0   0   0   0   0   1   1   0  36   0   0   0   0]\n",
       " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
-      " [  2   0   0   3   1   6   3   0   0   0  68  17   0]\n",
-      " [  2   0   2   1   0   0   0   0   0   0  36  59   0]\n",
+      " [  0   0   0   0   0   1   0   0   0   0  86  13   0]\n",
+      " [  0   0   0   0   0   0   1   0   1   0  14  84   0]\n",
       " [  0   0   0   0   0   0   1   0   0   0   0   0  37]]\n"
      ]
     }
@@ -720,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -735,24 +750,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best clf: SVC(C=10, cache_size=200, class_weight=None, coef0=0.0,\n",
-      "    decision_function_shape='ovr', degree=3, gamma=0.1, kernel='rbf',\n",
+      "best clf: SVC(C=100, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "    decision_function_shape='ovr', degree=3, gamma=0.001, kernel='rbf',\n",
       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
       "    tol=0.001, verbose=False)\n",
-      "Accuracy:  0.7802303262955854\n",
-      "[[ 46   4   1   1   0   0   0   0   0   0   3   2   0]\n",
-      " [  6  51   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  1   3  48   1   1   0   1   0   0   0   1   1   0]\n",
-      " [  2   0   2  83   3   8   0   0   0   0   1   0   0]\n",
-      " [  0   0   3   7  36   9   1   1   0   0   0   0   0]\n",
-      " [  0   1   2   6  23  46   5   0   1   0   0   1   0]\n",
-      " [  0   0   2   1   1   7 199   6   3   0   0   0   0]\n",
-      " [  0   0   1   0   0   0  11  25   2   0   0   0   0]\n",
-      " [  0   0   1   0   1   3   7   2  24   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0  96   0   0   0]\n",
-      " [  3   0   0   2   1   8   2   0   0   0  73  11   0]\n",
-      " [  1   0   0   1   0   0   0   0   0   0  47  51   0]\n",
-      " [  1   0   1   0   0   0   1   0   0   0   0   0  35]]\n"
+      "Accuracy:  0.9452975047984645\n",
+      "[[ 56   0   0   1   0   0   0   0   0   0   0   0   0]\n",
+      " [  0  57   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0  57   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0   0   2  95   1   1   0   0   0   0   0   0   0]\n",
+      " [  0   0   1   2  48   6   0   0   0   0   0   0   0]\n",
+      " [  0   0   0   1   8  76   0   0   0   0   0   0   0]\n",
+      " [  0   0   2   0   4   2 210   0   1   0   0   0   0]\n",
+      " [  0   0   1   0   0   0   0  38   0   0   0   0   0]\n",
+      " [  1   0   0   0   0   1   0   0  36   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   1   0   0  95   0   0   0]\n",
+      " [  0   0   1   0   0   2   0   0   0   0  88   9   0]\n",
+      " [  0   0   1   0   0   1   0   0   0   0   6  92   0]\n",
+      " [  0   1   0   0   0   0   0   0   0   0   0   0  37]]\n"
      ]
     }
    ],
